--- a/wechat-applet/pages/book/bookDetail/index.wxss
+++ b/wechat-applet/pages/book/bookDetail/index.wxss
@@ -50,6 +50,10 @@
   margin-top: 20rpx;
   border-radius: 12rpx;
 }
+.chapter-header{
+  padding: 20rpx;
+  border-bottom: 1px solid #f5f5f5;
+}
 .chapter-list{
   padding: 20rpx 0;
 }
